# chonkit

./: .env.example  .gitignore  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  config.example.json  docker-compose.yml  infra-compose.yml  setup.sh  sqlx-data.json
.sqlx/: query-0267e7628b71b78ae66f7abce431e07c9b7f38fb0a42081fe9edcdb2cd8cee07.json  query-05123a26c0d44c8e72d130247136d50ef949b8e0cb59b423ccac4450d4ec4a95.json  query-073ca6446b4e0c9a83a00fab10217e79f09d42957df99ed4600c24da4f52efcc.json  query-09067e91f7a504dfd3e8ea50a7b42d2588a2f7e5e490ae69b2e33384145de17d.json  query-1baa1f9899dee5d20839c451967031ce8ad8f72b04035ec7ab9b7911a914420a.json  query-244d341cf89c120dd65ce833658155db91a1e66406885eaf81a38f89933ac89e.json  query-2657f7a5866cd97d1380ba54d790d3cdbcdb56644dfdd695c51c45620e128c2c.json  query-266f0f263bf480e9a6750eb9d350e8e7c002c38b1f0d9892c1a41ef5a4cff504.json  query-284660af42e6a230a3caebe58a8640c0cc013b5eb1cb9a1248b203bcc6994f7a.json  query-44b426fb6e7ae4dcb39f3e035379e03cdf4406ab43382a3b34da80404db3be3a.json  query-4694978939b3d31d1ebef713cddcfc026280de851efb0d779fb5f1da09fadd96.json  query-4700b59eb26d63f3d5226454ebdac8c3fdbff1cb78718c8ee89f6cb43f27e0e2.json  query-481f72176dcd888fc6234d8daec130c15249e2cc46c34a6f41c8e7012e292148.json  query-545989a72dbb3be5fb8a8f8459aaed811f9332bc3862cbd267ac079e3680a767.json  query-558f6358bc162153af77d0142e356bbdfd8c1e84cd2b604300d037988b5328ee.json  query-57bd676f6f34681c4187c914e65bc707f8870f98141fa477977862c83bc64bba.json  query-61f67db3f3eb629c980418091192a526857c5a048547ba778dbbeaf254b44918.json  query-66365916bf235935cf222d6931e9db563231de861a78d301a9b33c1559094bcd.json  query-6a5635a815d01cebd249102b49635d347ba841ed12f4dab172af194135c375f4.json  query-6db1f34a372f4d0b12030807a53b53fb5d17e4878388ff85d58b4af632778171.json  query-725e124973497c4fc07361b9571e174841d4c567c33047cd9c3e0580a421a131.json  query-7e2a4628401f56715bf7ffeccc362b97d9fde9a444dd2f9fd36c5e2d2cc4ffbb.json  query-843c76dd68d9231af5b04d8fa1bce79b72ce24f5e2f5fb368d85d4f237f21888.json  query-84eec4a062f3c739308217481dabcfc2e1f3f917b28bdbed9f34bdfaa4d05dbd.json  query-88ce9821ab619d1e3bd0778b8ca55452fc9b71dc72559e3848598af073111cfa.json  query-89b95e355de8e40baa5d73638e7ea6c648a0edf33e739cd980f2ae8e679a92ba.json  query-8a5e8b2374085e57abd5fa0b689e4750512123f16a8830a56b7d7bc9b468ee26.json  query-973f2170e393975c6718682324c157e1bee61fcedfe1ef9674c25e5917409ea4.json  query-996b981d8b747e3b781256bfd03fe91f6ed289a6d171ed4f7461a64e5bd18c51.json  query-9b497de2ab73359c344b2b418c3203030f565f6326511a46fc98658d757a0d55.json  query-9fe303451b793aae1a546de132588be607423ce48593ab99296ee70dda46daea.json  query-a44a4ffb89e3692f58b59cdade6ef3dc6cdc779f39ec285ec39be4abd3545bbd.json  query-acd5f9d00a5b5682a11dcc12f4ffb2dadd1db3432671ec30aca6fc46dde4f920.json  query-b8afeeb4db5ff9652e8c721c64e4fb589f88d45533587a59a7a91157aa589bfe.json  query-bac68c85e5d226da0cb094674f8d0fb414dc4df902ad37330439f6ae288625cd.json  query-cc4b62f0f945007b688abc41830f0e387fd07458fac073d9da5231b2c8eb2a1e.json  query-d169c558df910c04f98627f46d1f0ee4fbbab4c51667ccbcee9cf966ba8db9b1.json  query-db6865153363c0727fd834e7b2f018d1bf75ba1c864e155799949fe0ad7bf7f5.json  query-e744ba2068aebc1d5c4188928f0644612008dd8545b2612dcaa0a09e0e2765c1.json  query-ed4c63e1485fc9dde7a910c9b4738905cf61d0051bd68f9cb4942ae6acb2bb0f.json  (+7 more)
chonkit/: Cargo.toml
chonkit/migrations/: 20240114123548_initial.down.sql
chonkit/src/: app.rs  config.rs  error.rs  main.rs
chonkit/src/app/: auth.rs  batch.rs  embedder.rs  repo.rs  server.rs  state.rs  test.rs  vector.rs
chonkit/src/app/document/: store.rs
chonkit/src/app/embedder/: fastembed.rs  openai.rs
chonkit/src/app/embedder/fastembed/: local.rs  remote.rs
chonkit/src/app/repo/: pg.rs
chonkit/src/app/repo/pg/: document.rs  vector.rs
chonkit/src/app/server/: api.rs  dto.rs  router.rs
chonkit/src/app/server/router/: document.rs  vector.rs
chonkit/src/app/test/: document.rs  vector.rs
chonkit/src/app/vector/: qdrant.rs  weaviate.rs
chonkit/src/core/: chunk.rs  document.rs  provider.rs  repo.rs  service.rs  vector.rs
chonkit/src/core/chunk/: semantic.rs  sliding.rs  snapping.rs
chonkit/src/core/document/: parser.rs  store.rs
chonkit/src/core/document/parser/: docx.rs  pdf.rs  text.rs
chonkit/src/core/model/: collection.rs  document.rs
chonkit/src/core/model/document/: config.rs
chonkit/src/core/repo/: document.rs
chonkit/src/core/service/: document.rs  vector.rs
chonkit/src/error/: http.rs
chunx/: Cargo.toml
chunx/src/: cursor.rs  lib.rs  semantic.rs  sliding.rs  snapping.rs
content/: README.md
docker/: chonkit.Dockerfile  feserver.Dockerfile
embedders/: Cargo.toml
embedders/src/: error.rs  fastembed.rs  lib.rs  openai.rs
embedders/src/fastembed/: local.rs  remote.rs
feserver/: Cargo.toml
feserver/src/: main.rs
migrations/: 20240114123548_initial.down.sql  20240114123548_initial.up.sql
scripts/: dl_embedder.py
src/: app.rs  cli.rs  config.rs  control.rs  core.rs  ctrl.rs  db.rs  document.rs  error.rs  imp.rs  lib.rs  main.rs  router.rs  service.rs  state.rs  vector_db.rs
src/app/: batch.rs  embedder.rs  service.rs  state.rs  test.rs  vector.rs
src/app/document/: store.rs
src/app/embedder/: fastembed.rs  openai.rs
src/app/repo/: pg.rs
src/app/server/: api.rs  dto.rs  router.rs
src/app/service/: document.rs  vector.rs
src/app/state/: document.rs  vector.rs
src/app/test/: document.rs  vector.rs
src/app/vector/: qdrant.rs  (+1 more)
src/control/: cli.rs  dto.rs  http.rs
src/core/: chunk.rs  document.rs  embedder.rs  model.rs  parse.rs  provider.rs  repo.rs  storage.rs  vector.rs
src/ctrl/: cli.rs  dto.rs  http.rs
src/db/: document.rs
src/document/: db.rs  models.rs
src/dto/: file.rs
src/error/: http.rs
src/imp/: service.rs
src/llm/: chunk.rs  mod.rs
src/model/: document.rs
src/router/: admin.rs
src/service/: chunk.rs  document.rs  vector.rs
test/: README.md
web/: .env.example  README.md  index.html  package-lock.json  package.json
web/src/: App.svelte  app.css
(+51 files in other folders)
