[package]
edition = "2021"
name = "chonkit"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
cookie = "0.18.1"
fastembed = "3.6.0"
lazy_static = "1.4.0"
lopdf = { version = "0.33.0", features = ["async"] }
qdrant-client = "1.10.1"
serde = "1.0.183"
serde_regex = "1.1.0"
serde_json = { version = "1.0.114", features = ["raw_value"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "chrono",
    "macros",
    "any",
    "runtime-tokio",
    "uuid",
] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
validify = "1.3.0"
docx-rs = "0.4.17"
weaviate-community = "0.2.2"
regex = "1.10.6"
suitest = "0.1.3"
cfg-if = "1.0.0"

# http
axum = { version = "0.7.4", features = ["multipart"], optional = true }
axum-extra = { version = "0.9.3", features = [
    "cookie",
    "typed-header",
    "cookie-private",
], optional = true }
axum-macros = { version = "0.4.1", optional = true }
tower-http = { version = "0.5.0", features = [
    "fs",
    "tracing",
    "trace",
    "cors",
], optional = true }

[features]
default = ["http"]
cli = []
http = ["axum", "axum-extra", "axum-macros", "tower-http"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
