[package]
edition = "2021"
name = "chonkit"
version = "0.1.0"

[lib]
name = "chonkit"
path = "src/lib.rs"

[[bin]]
name = "cli"
required-features = ["cli"]

[[bin]]
name = "server"
required-features = ["http"]

[[bin]]
name = "fembedder"
required-features = ["http", "fe-local", "cuda"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.5.3", features = ["derive"] }
cookie = "0.18.1"
serde = "1.0.183"
serde_regex = "1.1.0"
serde_json = { version = "1.0.114", features = ["raw_value"] }
sqlx = { version = "0.6.3", features = [
    "postgres",
    "chrono",
    "macros",
    "any",
    "runtime-tokio-native-tls",
    "uuid",
    "offline",
] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
validify = "1.3.0"
docx-rs = "0.4.17"
regex = "1.10.6"
suitest = "0.1.4"
sha2 = "0.10.8"
hex = "0.4.3"
pdfium-render = { version = "0.8.23" }
async-trait = "0.1.82"
rayon = "1.10.0"
futures-util = "0.3.30"
ort = { version = "2.0.0-rc.5", features = ["load-dynamic"], optional = true }
tracing-test = "0.2.5"
testcontainers = "0.22.0"
testcontainers-modules = { version = "0.10.0", features = ["postgres"] }
tokio-stream = "0.1.16"

# fembed
fastembed = { version = "4.0.0", optional = true }

# openai
reqwest = { version = "0.12.7", features = ["json"], optional = true }

# weaviate
weaviate-community = { version = "0.2.2", optional = true }

# qdrant
qdrant-client = { version = "1.10.1", optional = true }

# http
axum = { version = "0.7.4", features = ["multipart"], optional = true }
axum-extra = { version = "0.9.3", features = [
    "cookie",
    "typed-header",
    "cookie-private",
], optional = true }
axum-macros = { version = "0.4.1", optional = true }
tower-http = { version = "0.5.0", features = [
    "fs",
    "tracing",
    "trace",
    "cors",
], optional = true }
utoipa = { version = "4.2.3", features = [
    "axum_extras",
    "chrono",
    "uuid",
], optional = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"], optional = true }


[features]
default = ["http", "qdrant", "fe-local"]
cli = []
http = [
    "axum",
    "axum-extra",
    "axum-macros",
    "tower-http",
    "utoipa",
    "utoipa-swagger-ui",
]
fembed = ["fastembed"]
fe-local = ["fembed", "ort"]
fe-remote = ["fembed", "reqwest"]
openai = ["reqwest"]
weaviate = ["weaviate-community"]
qdrant = ["qdrant-client"]
cuda = ["ort?/cuda"]
