[package]
edition = "2021"
name = "chonkit"
version = "0.1.0"

[dependencies]
chonkit-embedders = { path = "../embedders", optional = true }
chunx = { path = "../chunx" }

tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.16"
serde = "1.0.183"
serde_json = { version = "1.0.114", features = ["raw_value"] }
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.31", features = ["serde"] }
async-trait = "0.1.82"
clap = { version = "4.5.3", features = ["derive"] }
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
hex = "0.4.3"
rayon = "1.10.0"
futures-util = "0.3.30"
serde_regex = "1.1.0"
sqlx = { version = "0.6.3", features = [
	"postgres",
	"chrono",
	"macros",
	"any",
	"runtime-tokio-native-tls",
	"uuid",
	"offline",
] }
tonic = "0.12.3"
validify = "1.3.0"
docx-rs = "0.4.17"
regex = "1.10.6"
suitest = "0.1.4"
pdfium-render = { version = "0.8.23" }
testcontainers = "0.22.0"
testcontainers-modules = { version = "0.10.0", features = ["postgres"] }


# weaviate
weaviate-community = { version = "0.2.2", optional = true }

# qdrant
qdrant-client = { version = "1.10.1", optional = true }

# http
axum = { version = "0.7.4", features = ["multipart"] }
axum-macros = { version = "0.4.1" }
tower-http = { version = "0.5.0", features = [
	"fs",
	"tracing",
	"trace",
	"cors",
] }
cookie = "0.18.1"
axum-extra = { version = "0.9.3", features = [
	"cookie",
	"typed-header",
	"cookie-private",
] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
serde_with = "3.11.0"
anyhow = { version = "1.0.93", features = ["backtrace"] }

[features]
default = ["weaviate", "qdrant", "fe-local", "openai"]
fe-local = ["chonkit-embedders", "chonkit-embedders?/fe-local"]
fe-remote = ["chonkit-embedders", "chonkit-embedders?/fe-remote"]
cuda = ["chonkit-embedders?/cuda"]
openai = ["chonkit-embedders", "chonkit-embedders?/openai"]
weaviate = ["weaviate-community"]
qdrant = ["qdrant-client"]
