[package]
name = "chunx"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.183"
thiserror = "1.0.56"
tracing = "0.1.40"
rayon = "1.10.0"

[dev-dependencies]
chonkit-embedders = { path = "../embedders" }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
suitest = "0.1.4"
